--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
         <div id="content" class="content">
 
 
-            <img src="http://www.jejudonews.com/view_img.php?gimg=202107/20_12312.jpg">
+            <img src="https://footer.kr/ccenter/source/images/temp01.png">
 
             <h2>
                 뮤지컬 웃는남자
